{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 25,
  "lineage": "b79a0dae-c0a5-31f6-ce65-8b7d6fe15cc9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0678f925de7e71984",
            "domain": "vpc",
            "id": "eipalloc-0678f925de7e71984",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-111-228-184.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.228.184",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059e40e92d0e20410",
            "domain": "vpc",
            "id": "eipalloc-059e40e92d0e20410",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-126-85-137.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.85.137",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697084372859:internet-gateway/igw-07bee0fc13825a1d0",
            "id": "igw-07bee0fc13825a1d0",
            "owner_id": "697084372859",
            "tags": {
              "Name": "internet gateway",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "internet gateway",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0646c461bbd9a901c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:697084372859:loadbalancer/app/Demo-ALG-tf/fcf4ff19c0c6e360",
            "arn_suffix": "app/Demo-ALG-tf/fcf4ff19c0c6e360",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Demo-ALG-tf-1972059809.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:697084372859:loadbalancer/app/Demo-ALG-tf/fcf4ff19c0c6e360",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Demo-ALG-tf",
            "security_groups": [
              "sg-06304944703659506"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-043377894e7e30f92"
              },
              {
                "subnet_id": "subnet-04e278ffbeb941a11"
              }
            ],
            "subnets": [
              "subnet-043377894e7e30f92",
              "subnet-04e278ffbeb941a11"
            ],
            "tags": {
              "Project": "demo-assignment",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "tags_all": {
              "Project": "demo-assignment",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "vpc_id": "vpc-0646c461bbd9a901c",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:697084372859:listener/app/Demo-ALG-tf/fcf4ff19c0c6e360/2334974305b47cdc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:697084372859:targetgroup/Demo-TargetGroup-tf/db62270a70c2c237",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:697084372859:listener/app/Demo-ALG-tf/fcf4ff19c0c6e360/2334974305b47cdc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:697084372859:loadbalancer/app/Demo-ALG-tf/fcf4ff19c0c6e360",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.TG-tf",
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:697084372859:targetgroup/Demo-TargetGroup-tf/db62270a70c2c237",
            "arn_suffix": "targetgroup/Demo-TargetGroup-tf/db62270a70c2c237",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 70,
                "matcher": "200,202",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:697084372859:targetgroup/Demo-TargetGroup-tf/db62270a70c2c237",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Demo-TargetGroup-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0646c461bbd9a901c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0678f925de7e71984",
            "connectivity_type": "public",
            "id": "nat-0035d701d41b8dd33",
            "network_interface_id": "eni-00efc4b415a09c107",
            "private_ip": "172.16.1.174",
            "public_ip": "3.111.228.184",
            "subnet_id": "subnet-04e278ffbeb941a11"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059e40e92d0e20410",
            "connectivity_type": "public",
            "id": "nat-0cc00c8ba8fadc417",
            "network_interface_id": "eni-07ac2db297123336c",
            "private_ip": "172.16.2.4",
            "public_ip": "13.126.85.137",
            "subnet_id": "subnet-043377894e7e30f92"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697084372859:route-table/rtb-072ae2019750c5e50",
            "id": "rtb-072ae2019750c5e50",
            "owner_id": "697084372859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0035d701d41b8dd33",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet1 route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private subnet1 route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0646c461bbd9a901c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697084372859:route-table/rtb-0eb6b74f3463d470f",
            "id": "rtb-0eb6b74f3463d470f",
            "owner_id": "697084372859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cc00c8ba8fadc417",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet2 route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private subnet2 route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0646c461bbd9a901c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697084372859:route-table/rtb-04d1e087d2fef660a",
            "id": "rtb-04d1e087d2fef660a",
            "owner_id": "697084372859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bee0fc13825a1d0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public subnet route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public subnet route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0646c461bbd9a901c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002e55c2381c5f9a2",
            "route_table_id": "rtb-04d1e087d2fef660a",
            "subnet_id": "subnet-04e278ffbeb941a11"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0218ff3f9005868f7",
            "route_table_id": "rtb-04d1e087d2fef660a",
            "subnet_id": "subnet-043377894e7e30f92"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub1_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c812f86d33114180",
            "route_table_id": "rtb-072ae2019750c5e50",
            "subnet_id": "subnet-0392ccfab1fbe6b27"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_route_table.prv_sub1_rt",
            "aws_subnet.prv_sub1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub2_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01eb0a16e65bcac25",
            "route_table_id": "rtb-0eb6b74f3463d470f",
            "subnet_id": "subnet-0954556a734eb5a61"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_route_table.prv_sub2_rt",
            "aws_subnet.prv_sub2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697084372859:security-group/sg-06304944703659506",
            "description": "SG for application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06304944703659506",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "697084372859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for ALB",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "SG for ALB",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0646c461bbd9a901c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697084372859:security-group/sg-057c991a502737d98",
            "description": "SG for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057c991a502737d98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "697084372859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for web",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "SG for web",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0646c461bbd9a901c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697084372859:subnet/subnet-0392ccfab1fbe6b27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0392ccfab1fbe6b27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697084372859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet1",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private_subnet1",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0646c461bbd9a901c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697084372859:subnet/subnet-0954556a734eb5a61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0954556a734eb5a61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697084372859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private_subnet2",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0646c461bbd9a901c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697084372859:subnet/subnet-04e278ffbeb941a11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e278ffbeb941a11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697084372859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet1",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public_subnet1",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0646c461bbd9a901c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697084372859:subnet/subnet-043377894e7e30f92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043377894e7e30f92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697084372859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet2",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public_subnet2",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0646c461bbd9a901c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697084372859:vpc/vpc-0646c461bbd9a901c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-08e94ed18381562b6",
            "default_route_table_id": "rtb-0d2b64fb83ab0a2d8",
            "default_security_group_id": "sg-078960e7c394c22ef",
            "dhcp_options_id": "dopt-00984d9b204d300a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0646c461bbd9a901c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2b64fb83ab0a2d8",
            "owner_id": "697084372859",
            "tags": {
              "Name": "My Demo VPC",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "My Demo VPC",
              "Project": "demo-assignment"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}